@@ -1,63 +1,104 @@
 package net.kdt.pojavlaunch;
 
-import android.app.*;
-import android.content.*;
-import android.net.*;
-import android.os.*;
-import android.system.*;
-import android.util.*;
-import com.google.gson.*;
-import com.oracle.dalvik.*;
-import java.io.*;
-import java.lang.reflect.*;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.nio.charset.*;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.*;
-import java.util.zip.*;
-import net.kdt.pojavlaunch.prefs.*;
-import net.kdt.pojavlaunch.utils.*;
-import net.kdt.pojavlaunch.value.*;
-import net.kdt.pojavlaunch.value.launcherprofiles.LauncherProfiles;
-
-import org.apache.commons.codec.binary.Hex;
-import org.apache.commons.codec.digest.DigestUtils;
-import org.apache.commons.io.FileUtils;
-import org.lwjgl.glfw.*;
-import android.view.*;
-import android.widget.Toast;
-
 import static android.os.Build.VERSION.SDK_INT;
 import static android.os.Build.VERSION_CODES.P;
-import static android.os.Build.VERSION_CODES.Q;
+import static net.kdt.pojavlaunch.PojavApplication.sExecutorService;
 import static net.kdt.pojavlaunch.prefs.LauncherPreferences.PREF_IGNORE_NOTCH;
 import static net.kdt.pojavlaunch.prefs.LauncherPreferences.PREF_NOTCH_SIZE;
 
+import android.app.Activity;
+import android.app.ActivityManager;
+import android.app.AlertDialog;
+import android.app.NotificationChannel;
+import android.app.NotificationManager;
+import android.app.ProgressDialog;
+import android.content.ClipData;
+import android.content.ClipboardManager;
+import android.content.Context;
+import android.content.Intent;
+import android.content.res.Configuration;
+import android.database.Cursor;
+import android.net.Uri;
+import android.os.Build;
+import android.os.Bundle;
+import android.os.Environment;
+import android.os.Handler;
+import android.os.Looper;
+import android.provider.DocumentsContract;
+import android.provider.OpenableColumns;
+import android.util.ArrayMap;
+import android.util.DisplayMetrics;
+import android.util.Log;
+import android.view.View;
+import android.view.WindowManager;
+import android.webkit.MimeTypeMap;
+import android.widget.EditText;
+import android.widget.Toast;
+
+import androidx.annotation.NonNull;
+import androidx.annotation.Nullable;
+import androidx.core.app.NotificationManagerCompat;
+import androidx.fragment.app.Fragment;
+import androidx.fragment.app.FragmentActivity;
+import androidx.fragment.app.FragmentTransaction;
+
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+
+import net.kdt.pojavlaunch.multirt.MultiRTUtils;
+import net.kdt.pojavlaunch.multirt.Runtime;
+import net.kdt.pojavlaunch.plugins.FFmpegPlugin;
+import net.kdt.pojavlaunch.prefs.LauncherPreferences;
+import net.kdt.pojavlaunch.utils.DownloadUtils;
+import net.kdt.pojavlaunch.utils.JREUtils;
+import net.kdt.pojavlaunch.utils.JSONUtils;
+import net.kdt.pojavlaunch.utils.OldVersionsUtils;
+import net.kdt.pojavlaunch.value.DependentLibrary;
+import net.kdt.pojavlaunch.value.MinecraftAccount;
+import net.kdt.pojavlaunch.value.launcherprofiles.LauncherProfiles;
+import net.kdt.pojavlaunch.value.launcherprofiles.MinecraftProfile;
+
+import org.apache.commons.codec.binary.Hex;
+import org.apache.commons.io.IOUtils;
+import org.lwjgl.glfw.CallbackBridge;
+
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
+import java.lang.reflect.Field;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+
+@SuppressWarnings("IOStreamConstructor")
 public final class Tools {
-    public static final boolean ENABLE_DEV_FEATURES = BuildConfig.DEBUG;
-
+    public static final Handler MAIN_HANDLER = new Handler(Looper.getMainLooper());
     public static String APP_NAME = "null";
-    
-    public static final Gson GLOBAL_GSON = new GsonBuilder().setPrettyPrinting().create();
-    
-    public static final String URL_HOME = "https://pojavlauncherteam.github.io/PojavLauncher";
 
+    public static final Gson GLOBAL_GSON = new GsonBuilder().setPrettyPrinting().create();
+
+    public static final String URL_HOME = "https://pojavlauncherteam.github.io";
+    public static String NATIVE_LIB_DIR;
     public static String DIR_DATA; //Initialized later to get context
+    public static File DIR_CACHE;
     public static String MULTIRT_HOME;
     public static String LOCAL_RENDERER = null;
     public static int DEVICE_ARCHITECTURE;
+    public static final String LAUNCHERPROFILES_RTPREFIX = "pojav://";
 
     // New since 3.3.1
     public static String DIR_ACCOUNT_NEW;
-    public static String DIR_ACCOUNT_OLD;
     public static String DIR_GAME_HOME = Environment.getExternalStorageDirectory().getAbsolutePath() + "/games/PojavLauncher";
     public static String DIR_GAME_NEW;
-    public static String DIR_GAME_OLD = Environment.getExternalStorageDirectory().getAbsolutePath() + "/games/.minecraft";
-    
+
     // New since 3.0.0
-    public static String DIR_HOME_JRE;
     public static String DIRNAME_HOME_JRE = "lib";
 
     // New since 2.4.2
@@ -70,8 +111,27 @@ public final class Tools {
     public static String OBSOLETE_RESOURCES_PATH;
     public static String CTRLMAP_PATH;
     public static String CTRLDEF_FILE;
-    
-    public static final String LIBNAME_OPTIFINE = "optifine:OptiFine";
+    public static final int RUN_MOD_INSTALLER = 2050;
+
+
+    private static File getPojavStorageRoot(Context ctx) {
+        if(SDK_INT >= 29) {
+            return ctx.getExternalFilesDir(null);
+        }else{
+            return new File(Environment.getExternalStorageDirectory(),"games/PojavLauncher");
+        }
+    }
+
+    /**
+     * Checks if the Pojav's storage root is accessible and read-writable
+     * @param context context to get the storage root if it's not set yet
+     * @return true if storage is fine, false if storage is not accessible
+     */
+    public static boolean checkStorageRoot(Context context) {
+        File externalFilesDir = DIR_GAME_HOME  == null ? Tools.getPojavStorageRoot(context) : new File(DIR_GAME_HOME);
+        //externalFilesDir == null when the storage is not mounted if it was obtained with the context call
+        return externalFilesDir != null && Environment.getExternalStorageState(externalFilesDir).equals(Environment.MEDIA_MOUNTED);
+    }
 
     /**
      * Since some constant requires the use of the Context object
@@ -79,13 +139,10 @@ public final class Tools {
      * Any value (in)directly dependant on DIR_DATA should be set only here.
      */
     public static void initContextConstants(Context ctx){
+        DIR_CACHE = ctx.getCacheDir();
         DIR_DATA = ctx.getFilesDir().getParent();
         MULTIRT_HOME = DIR_DATA+"/runtimes";
-        if(SDK_INT >= 29) {
-            DIR_GAME_HOME = ctx.getExternalFilesDir(null).getAbsolutePath();
-        }else{
-            DIR_GAME_HOME = new File(Environment.getExternalStorageDirectory(),"games/PojavLauncher").getAbsolutePath();
-        }
+        DIR_GAME_HOME = getPojavStorageRoot(ctx).getAbsolutePath();
         DIR_GAME_NEW = DIR_GAME_HOME + "/.minecraft";
         DIR_HOME_VERSION = DIR_GAME_NEW + "/versions";
         DIR_HOME_LIBRARY = DIR_GAME_NEW + "/libraries";
@@ -94,17 +151,18 @@ public final class Tools {
         OBSOLETE_RESOURCES_PATH= DIR_GAME_NEW + "/resources";
         CTRLMAP_PATH = DIR_GAME_HOME + "/controlmap";
         CTRLDEF_FILE = DIR_GAME_HOME + "/controlmap/default.json";
+        NATIVE_LIB_DIR = ctx.getApplicationInfo().nativeLibraryDir;
     }
 
 
-    public static void launchMinecraft(final LoggableActivity ctx, MinecraftAccount profile, String versionName) throws Throwable {
-        ActivityManager.MemoryInfo mi = new ActivityManager.MemoryInfo();
-        ((ActivityManager)ctx.getSystemService(Context.ACTIVITY_SERVICE)).getMemoryInfo(mi);
-        if(LauncherPreferences.PREF_RAM_ALLOCATION > (mi.availMem/1048576L)) {
+    public static void launchMinecraft(final Activity activity, MinecraftAccount minecraftAccount,
+                                       MinecraftProfile minecraftProfile, String versionId, int versionJavaRequirement) throws Throwable {
+        int freeDeviceMemory = getFreeDeviceMemory(activity);
+        if(LauncherPreferences.PREF_RAM_ALLOCATION > freeDeviceMemory) {
             Object memoryErrorLock = new Object();
-            ctx.runOnUiThread(() -> {
-                androidx.appcompat.app.AlertDialog.Builder b = new androidx.appcompat.app.AlertDialog.Builder(ctx)
-                        .setMessage(ctx.getString(R.string.memory_warning_msg,(mi.availMem/1048576L),LauncherPreferences.PREF_RAM_ALLOCATION))
+            activity.runOnUiThread(() -> {
+                androidx.appcompat.app.AlertDialog.Builder b = new androidx.appcompat.app.AlertDialog.Builder(activity)
+                        .setMessage(activity.getString(R.string.memory_warning_msg, freeDeviceMemory ,LauncherPreferences.PREF_RAM_ALLOCATION))
                         .setPositiveButton(android.R.string.ok, (dialogInterface, i) -> {synchronized(memoryErrorLock){memoryErrorLock.notifyAll();}})
                         .setOnCancelListener((i) -> {synchronized(memoryErrorLock){memoryErrorLock.notifyAll();}});
                 b.show();
@@ -113,91 +171,174 @@ public final class Tools {
                 memoryErrorLock.wait();
             }
         }
+        Runtime runtime = MultiRTUtils.forceReread(Tools.pickRuntime(minecraftProfile, versionJavaRequirement));
+        JMinecraftVersionList.Version versionInfo = Tools.getVersionInfo(versionId);
+        LauncherProfiles.update();
+        File gamedir = Tools.getGameDirPath(minecraftProfile);
 
-        JMinecraftVersionList.Version versionInfo = Tools.getVersionInfo(null,versionName);
-        PerVersionConfig.update();
-        PerVersionConfig.VersionConfig pvcConfig = PerVersionConfig.configMap.get(versionName);
 
-        String gamedirPath;
-        if(pvcConfig != null && pvcConfig.gamePath != null && !pvcConfig.gamePath.isEmpty()) gamedirPath = pvcConfig.gamePath;
-        else gamedirPath = Tools.DIR_GAME_NEW;
-        if(pvcConfig != null && pvcConfig.jvmArgs != null && !pvcConfig.jvmArgs.isEmpty()) LauncherPreferences.PREF_CUSTOM_JAVA_ARGS = pvcConfig.jvmArgs;
-        PojavLoginActivity.disableSplash(gamedirPath);
-        String[] launchArgs = getMinecraftArgs(profile, versionInfo, gamedirPath);
+        // Pre-process specific files
+        disableSplash(gamedir);
+        String[] launchArgs = getMinecraftClientArgs(minecraftAccount, versionInfo, gamedir);
 
-        // ctx.appendlnToLog("Minecraft Args: " + Arrays.toString(launchArgs));
+        // Select the appropriate openGL version
+        OldVersionsUtils.selectOpenGlVersion(versionInfo);
 
-        String launchClassPath = generateLaunchClassPath(versionInfo,versionName);
 
-        List<String> javaArgList = new ArrayList<String>();
+        String launchClassPath = generateLaunchClassPath(versionInfo, versionId);
 
-        // Only Java 8 supports headful AWT for now
-        if (ctx.jreReleaseList.get("JAVA_VERSION").equals("1.8.0")) {
-            getCacioJavaArgs(javaArgList, false);
+        List<String> javaArgList = new ArrayList<>();
+        javaArgList.add("-Dorg.lwjgl.util.NoChecks=true");
+
+        getCacioJavaArgs(javaArgList, runtime.javaVersion == 8);
+
+        if (versionInfo.logging != null) {
+            String configFile = Tools.DIR_DATA + "/security/" + versionInfo.logging.client.file.id.replace("client", "log4j-rce-patch");
+            if (!new File(configFile).exists()) {
+                configFile = Tools.DIR_GAME_NEW + "/" + versionInfo.logging.client.file.id;
+            }
+            javaArgList.add("-Dlog4j.configurationFile=" + configFile);
         }
-
-/*
-        int mcReleaseDate = Integer.parseInt(versionInfo.releaseTime.substring(0, 10).replace("-", ""));
-        // 13w17a: 20130425
-        // 13w18a: 20130502
-        if (mcReleaseDate < 20130502 && versionInfo.minimumLauncherVersion < 9){
-            ctx.appendlnToLog("AWT-enabled version detected! ("+mcReleaseDate+")");
-            getCacioJavaArgs(javaArgList,false);
-        }else{
-            getCacioJavaArgs(javaArgList,false); // true
-            ctx.appendlnToLog("Headless version detected! ("+mcReleaseDate+")");
-        }
-*/
-
+        javaArgList.addAll(Arrays.asList(getMinecraftJVMArgs(versionId, gamedir)));
         javaArgList.add("-cp");
         javaArgList.add(getLWJGL3ClassPath() + ":" + launchClassPath);
 
         javaArgList.add(versionInfo.mainClass);
         javaArgList.addAll(Arrays.asList(launchArgs));
         // ctx.appendlnToLog("full args: "+javaArgList.toString());
-        JREUtils.launchJavaVM(ctx, javaArgList);
+        String args = LauncherPreferences.PREF_CUSTOM_JAVA_ARGS;
+        if(Tools.isValidString(minecraftProfile.javaArgs)) args = minecraftProfile.javaArgs;
+        FFmpegPlugin.discover(activity);
+        JREUtils.launchJavaVM(activity, runtime, gamedir, javaArgList, args);
     }
-    
-    public static void getCacioJavaArgs(List<String> javaArgList, boolean isHeadless) {
-        javaArgList.add("-Djava.awt.headless="+isHeadless);
+
+    public static File getGameDirPath(@NonNull MinecraftProfile minecraftProfile){
+        if(minecraftProfile.gameDir != null){
+            if(minecraftProfile.gameDir.startsWith(Tools.LAUNCHERPROFILES_RTPREFIX))
+                return new File(minecraftProfile.gameDir.replace(Tools.LAUNCHERPROFILES_RTPREFIX,Tools.DIR_GAME_HOME+"/"));
+            else
+                return new File(Tools.DIR_GAME_HOME,minecraftProfile.gameDir);
+        }
+        return new File(Tools.DIR_GAME_NEW);
+    }
+
+    public static void buildNotificationChannel(Context context){
+        if(Build.VERSION.SDK_INT < Build.VERSION_CODES.O) return;
+        NotificationChannel channel = new NotificationChannel(
+                context.getString(R.string.notif_channel_id),
+                context.getString(R.string.notif_channel_name), NotificationManager.IMPORTANCE_DEFAULT);
+        NotificationManagerCompat manager = NotificationManagerCompat.from(context);
+        manager.createNotificationChannel(channel);
+    }
+    public static void disableSplash(File dir) {
+        File configDir = new File(dir, "config");
+        if(configDir.exists() || configDir.mkdirs()) {
+            File forgeSplashFile = new File(dir, "config/splash.properties");
+            String forgeSplashContent = "enabled=true";
+            try {
+                if (forgeSplashFile.exists()) {
+                    forgeSplashContent = Tools.read(forgeSplashFile.getAbsolutePath());
+                }
+                if (forgeSplashContent.contains("enabled=true")) {
+                    Tools.write(forgeSplashFile.getAbsolutePath(),
+                            forgeSplashContent.replace("enabled=true", "enabled=false"));
+                }
+            } catch (IOException e) {
+                Log.w(Tools.APP_NAME, "Could not disable Forge 1.12.2 and below splash screen!", e);
+            }
+        } else {
+            Log.w(Tools.APP_NAME, "Failed to create the configuration directory");
+        }
+    }
+
+    public static void getCacioJavaArgs(List<String> javaArgList, boolean isJava8) {
         // Caciocavallo config AWT-enabled version
-        javaArgList.add("-Dcacio.managed.screensize=" + CallbackBridge.physicalWidth + "x" + CallbackBridge.physicalHeight);
-        // javaArgList.add("-Dcacio.font.fontmanager=net.java.openjdk.cacio.ctc.CTCFontManager");
+        javaArgList.add("-Djava.awt.headless=false");
+        javaArgList.add("-Dcacio.managed.screensize=" + AWTCanvasView.AWT_CANVAS_WIDTH + "x" + AWTCanvasView.AWT_CANVAS_HEIGHT);
         javaArgList.add("-Dcacio.font.fontmanager=sun.awt.X11FontManager");
         javaArgList.add("-Dcacio.font.fontscaler=sun.font.FreetypeFontScaler");
         javaArgList.add("-Dswing.defaultlaf=javax.swing.plaf.metal.MetalLookAndFeel");
-        javaArgList.add("-Dawt.toolkit=net.java.openjdk.cacio.ctc.CTCToolkit");
-        javaArgList.add("-Djava.awt.graphicsenv=net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment");
+        if (isJava8) {
+            javaArgList.add("-Dawt.toolkit=net.java.openjdk.cacio.ctc.CTCToolkit");
+            javaArgList.add("-Djava.awt.graphicsenv=net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment");
+        } else {
+            javaArgList.add("-Dawt.toolkit=com.github.caciocavallosilano.cacio.ctc.CTCToolkit");
+            javaArgList.add("-Djava.awt.graphicsenv=com.github.caciocavallosilano.cacio.ctc.CTCGraphicsEnvironment");
+            javaArgList.add("-Djava.system.class.loader=com.github.caciocavallosilano.cacio.ctc.CTCPreloadClassLoader");
+
+            javaArgList.add("--add-exports=java.desktop/java.awt=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/sun.java2d=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/sun.awt=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/sun.awt.event=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.desktop/sun.font=ALL-UNNAMED");
+            javaArgList.add("--add-exports=java.base/sun.security.action=ALL-UNNAMED");
+            javaArgList.add("--add-opens=java.base/java.util=ALL-UNNAMED");
+            javaArgList.add("--add-opens=java.desktop/java.awt=ALL-UNNAMED");
+            javaArgList.add("--add-opens=java.desktop/sun.font=ALL-UNNAMED");
+            javaArgList.add("--add-opens=java.desktop/sun.java2d=ALL-UNNAMED");
+            javaArgList.add("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED");
+
+            // Opens the java.net package to Arc DNS injector on Java 9+
+            javaArgList.add("--add-opens=java.base/java.net=ALL-UNNAMED");
+        }
 
         StringBuilder cacioClasspath = new StringBuilder();
-        cacioClasspath.append("-Xbootclasspath/p");
-        File cacioDir = new File(DIR_GAME_HOME + "/caciocavallo");
-        if (cacioDir.exists() && cacioDir.isDirectory()) {
-            for (File file : cacioDir.listFiles()) {
+        cacioClasspath.append("-Xbootclasspath/").append(isJava8 ? "p" : "a");
+        File cacioDir = new File(DIR_GAME_HOME + "/caciocavallo" + (isJava8 ? "" : "17"));
+        File[] cacioFiles = cacioDir.listFiles();
+        if (cacioFiles != null) {
+            for (File file : cacioFiles) {
                 if (file.getName().endsWith(".jar")) {
-                    cacioClasspath.append(":" + file.getAbsolutePath());
+                    cacioClasspath.append(":").append(file.getAbsolutePath());
                 }
             }
         }
         javaArgList.add(cacioClasspath.toString());
     }
 
-    public static String[] getMinecraftArgs(MinecraftAccount profile, JMinecraftVersionList.Version versionInfo, String strGameDir) {
+    public static String[] getMinecraftJVMArgs(String versionName, File gameDir) {
+        JMinecraftVersionList.Version versionInfo = Tools.getVersionInfo(versionName, true);
+        // Parse Forge 1.17+ additional JVM Arguments
+        if (versionInfo.inheritsFrom == null || versionInfo.arguments == null || versionInfo.arguments.jvm == null) {
+            return new String[0];
+        }
+
+        Map<String, String> varArgMap = new ArrayMap<>();
+        varArgMap.put("classpath_separator", ":");
+        varArgMap.put("library_directory", DIR_HOME_LIBRARY);
+        varArgMap.put("version_name", versionInfo.id);
+        varArgMap.put("natives_directory", Tools.NATIVE_LIB_DIR);
+
+        List<String> minecraftArgs = new ArrayList<>();
+        if (versionInfo.arguments != null) {
+            for (Object arg : versionInfo.arguments.jvm) {
+                if (arg instanceof String) {
+                    minecraftArgs.add((String) arg);
+                } //TODO: implement (?maybe?)
+            }
+        }
+        return JSONUtils.insertJSONValueList(minecraftArgs.toArray(new String[0]), varArgMap);
+    }
+
+    public static String[] getMinecraftClientArgs(MinecraftAccount profile, JMinecraftVersionList.Version versionInfo, File gameDir) {
         String username = profile.username;
         String versionName = versionInfo.id;
         if (versionInfo.inheritsFrom != null) {
             versionName = versionInfo.inheritsFrom;
         }
-        
+
         String userType = "mojang";
 
-        File gameDir = new File(strGameDir);
-        gameDir.mkdirs();
-
         Map<String, String> varArgMap = new ArrayMap<>();
+        varArgMap.put("auth_session", profile.accessToken); // For legacy versions of MC
         varArgMap.put("auth_access_token", profile.accessToken);
         varArgMap.put("auth_player_name", username);
-        varArgMap.put("auth_uuid", profile.profileId);
+        varArgMap.put("auth_uuid", profile.profileId.replace("-", ""));
+        varArgMap.put("auth_xuid", profile.xuid);
         varArgMap.put("assets_root", Tools.ASSETS_PATH);
         varArgMap.put("assets_index_name", versionInfo.assets);
         varArgMap.put("game_assets", Tools.ASSETS_PATH);
@@ -207,47 +348,23 @@ public final class Tools {
         varArgMap.put("version_name", versionName);
         varArgMap.put("version_type", versionInfo.type);
 
-        List<String> minecraftArgs = new ArrayList<String>();
+        List<String> minecraftArgs = new ArrayList<>();
         if (versionInfo.arguments != null) {
             // Support Minecraft 1.13+
             for (Object arg : versionInfo.arguments.game) {
                 if (arg instanceof String) {
                     minecraftArgs.add((String) arg);
-                } else {
-                    /*
-                    JMinecraftVersionList.Arguments.ArgValue argv = (JMinecraftVersionList.Arguments.ArgValue) arg;
-                    if (argv.values != null) {
-                        minecraftArgs.add(argv.values[0]);
-                    } else {
-                        
-                         for (JMinecraftVersionList.Arguments.ArgValue.ArgRules rule : arg.rules) {
-                         // rule.action = allow
-                         // TODO implement this
-                         }
-                         
-                    }
-                    */
-                }
+                } //TODO: implement else clause
             }
         }
-        minecraftArgs.add("--width");
-        minecraftArgs.add(Integer.toString(CallbackBridge.windowWidth));
-        minecraftArgs.add("--height");
-        minecraftArgs.add(Integer.toString(CallbackBridge.windowHeight));
-        minecraftArgs.add("--fullscreenWidth");
-        minecraftArgs.add(Integer.toString(CallbackBridge.windowWidth));
-        minecraftArgs.add("--fullscreenHeight");
-        minecraftArgs.add(Integer.toString(CallbackBridge.windowHeight));
-        
-        String[] argsFromJson = JSONUtils.insertJSONValueList(
-            splitAndFilterEmpty(
-                versionInfo.minecraftArguments == null ?
-                fromStringArray(minecraftArgs.toArray(new String[0])):
-                versionInfo.minecraftArguments
-            ), varArgMap
+
+        return JSONUtils.insertJSONValueList(
+                splitAndFilterEmpty(
+                        versionInfo.minecraftArguments == null ?
+                                fromStringArray(minecraftArgs.toArray(new String[0])):
+                                versionInfo.minecraftArguments
+                ), varArgMap
         );
-        // Tools.dialogOnUiThread(this, "Result args", Arrays.asList(argsFromJson).toString());
-        return argsFromJson;
     }
 
     public static String fromStringArray(String[] strArr) {
@@ -261,18 +378,23 @@ public final class Tools {
     }
 
     private static String[] splitAndFilterEmpty(String argStr) {
-        List<String> strList = new ArrayList<String>();
+        List<String> strList = new ArrayList<>();
         for (String arg : argStr.split(" ")) {
             if (!arg.isEmpty()) {
                 strList.add(arg);
             }
         }
-        strList.add("--fullscreen");
+        //strList.add("--fullscreen");
         return strList.toArray(new String[0]);
     }
 
-    public static String artifactToPath(String group, String artifact, String version) {
-        return group.replaceAll("\\.", "/") + "/" + artifact + "/" + version + "/" + artifact + "-" + version + ".jar";
+    public static String artifactToPath(DependentLibrary library) {
+        if (library.downloads != null &&
+            library.downloads.artifact != null &&
+            library.downloads.artifact.path != null)
+            return library.downloads.artifact.path;
+        String[] libInfos = library.name.split(":");
+        return libInfos[0].replaceAll("\\.", "/") + "/" + libInfos[1] + "/" + libInfos[2] + "/" + libInfos[1] + "-" + libInfos[2] + ".jar";
     }
 
     public static String getPatchedFile(String version) {
@@ -282,10 +404,11 @@ public final class Tools {
     private static String getLWJGL3ClassPath() {
         StringBuilder libStr = new StringBuilder();
         File lwjgl3Folder = new File(Tools.DIR_GAME_HOME, "lwjgl3");
-        if (/* info.arguments != null && */ lwjgl3Folder.exists()) {
-            for (File file: lwjgl3Folder.listFiles()) {
+        File[] lwjgl3Files = lwjgl3Folder.listFiles();
+        if (lwjgl3Files != null) {
+            for (File file: lwjgl3Files) {
                 if (file.getName().endsWith(".jar")) {
-                    libStr.append(file.getAbsolutePath() + ":");
+                    libStr.append(file.getAbsolutePath()).append(":");
                 }
             }
         }
@@ -294,31 +417,11 @@ public final class Tools {
         return libStr.toString();
     }
 
-    private static boolean isClientFirst = false;
+    private final static boolean isClientFirst = false;
     public static String generateLaunchClassPath(JMinecraftVersionList.Version info,String actualname) {
         StringBuilder libStr = new StringBuilder(); //versnDir + "/" + version + "/" + version + ".jar:";
 
         String[] classpath = generateLibClasspath(info);
-
-        // Debug: LWJGL 3 override
-        // File lwjgl2Folder = new File(Tools.MAIN_PATH, "lwjgl2");
-
-        /*
-         File lwjgl3Folder = new File(Tools.MAIN_PATH, "lwjgl3");
-         if (lwjgl3Folder.exists()) {
-         for (File file: lwjgl3Folder.listFiles()) {
-         if (file.getName().endsWith(".jar")) {
-         libStr.append(file.getAbsolutePath() + ":");
-         }
-         }
-         } else if (lwjgl2Folder.exists()) {
-         for (File file: lwjgl2Folder.listFiles()) {
-         if (file.getName().endsWith(".jar")) {
-         libStr.append(file.getAbsolutePath() + ":");
-         }
-         }
-         }
-         */
 
         if (isClientFirst) {
             libStr.append(getPatchedFile(actualname));
@@ -328,7 +431,7 @@ public final class Tools {
                 Log.d(APP_NAME, "Ignored non-exists file: " + perJar);
                 continue;
             }
-            libStr.append((isClientFirst ? ":" : "") + perJar + (!isClientFirst ? ":" : ""));
+            libStr.append((isClientFirst ? ":" : "")).append(perJar).append(!isClientFirst ? ":" : "");
         }
         if (!isClientFirst) {
             libStr.append(getPatchedFile(actualname));
@@ -337,51 +440,58 @@ public final class Tools {
         return libStr.toString();
     }
 
-    public static DisplayMetrics getDisplayMetrics(Activity ctx) {
+    public static DisplayMetrics getDisplayMetrics(Activity activity) {
         DisplayMetrics displayMetrics = new DisplayMetrics();
 
-        if(SDK_INT >= Build.VERSION_CODES.N && (ctx.isInMultiWindowMode() || ctx.isInPictureInPictureMode())
-        || PREF_NOTCH_SIZE == -1 ){
+        if(SDK_INT >= Build.VERSION_CODES.N && (activity.isInMultiWindowMode() || activity.isInPictureInPictureMode())){
             //For devices with free form/split screen, we need window size, not screen size.
-            displayMetrics = ctx.getResources().getDisplayMetrics();
+            displayMetrics = activity.getResources().getDisplayMetrics();
         }else{
             if (SDK_INT >= Build.VERSION_CODES.R) {
-                ctx.getDisplay().getRealMetrics(displayMetrics);
-            } else {
-                 ctx.getWindowManager().getDefaultDisplay().getRealMetrics(displayMetrics);
+                activity.getDisplay().getRealMetrics(displayMetrics);
+            } else { // Removed the clause for devices with unofficial notch support, since it also ruins all devices with virtual nav bars before P
+                activity.getWindowManager().getDefaultDisplay().getRealMetrics(displayMetrics);
             }
             if(!PREF_IGNORE_NOTCH){
                 //Remove notch width when it isn't ignored.
-                displayMetrics.widthPixels -= PREF_NOTCH_SIZE;
+                if(activity.getResources().getConfiguration().orientation == Configuration.ORIENTATION_PORTRAIT)
+                    displayMetrics.heightPixels -= PREF_NOTCH_SIZE;
+                else
+                    displayMetrics.widthPixels -= PREF_NOTCH_SIZE;
             }
         }
+        currentDisplayMetrics = displayMetrics;
         return displayMetrics;
     }
 
-    public static void setFullscreen(Activity act) {
-        final View decorView = act.getWindow().getDecorView();
-        decorView.setOnSystemUiVisibilityChangeListener (new View.OnSystemUiVisibilityChangeListener() {
-                @Override
-                public void onSystemUiVisibilityChange(int visibility) {
-                    if ((visibility & View.SYSTEM_UI_FLAG_FULLSCREEN) == 0) {
-                        decorView.setSystemUiVisibility(
-                            View.SYSTEM_UI_FLAG_LAYOUT_STABLE
+    public static void setFullscreen(Activity activity, boolean fullscreen) {
+        final View decorView = activity.getWindow().getDecorView();
+        View.OnSystemUiVisibilityChangeListener visibilityChangeListener = visibility -> {
+            if(fullscreen){
+                if ((visibility & View.SYSTEM_UI_FLAG_FULLSCREEN) == 0) {
+                    decorView.setSystemUiVisibility(View.SYSTEM_UI_FLAG_LAYOUT_STABLE
+                            | View.SYSTEM_UI_FLAG_FULLSCREEN
                             | View.SYSTEM_UI_FLAG_LAYOUT_HIDE_NAVIGATION
                             | View.SYSTEM_UI_FLAG_HIDE_NAVIGATION
                             | View.SYSTEM_UI_FLAG_IMMERSIVE_STICKY
                             | View.SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN);
-                    }
                 }
-            });
+            }else{
+                decorView.setSystemUiVisibility(View.SYSTEM_UI_FLAG_VISIBLE);
+            }
+
+        };
+        decorView.setOnSystemUiVisibilityChangeListener(visibilityChangeListener);
+        visibilityChangeListener.onSystemUiVisibilityChange(decorView.getSystemUiVisibility()); //call it once since the UI state may not change after the call, so the activity wont become fullscreen
     }
 
     public static DisplayMetrics currentDisplayMetrics;
 
-    public static void updateWindowSize(Activity ctx) {
-        currentDisplayMetrics = getDisplayMetrics(ctx);
+    public static void updateWindowSize(Activity activity) {
+        currentDisplayMetrics = getDisplayMetrics(activity);
 
-        CallbackBridge.physicalWidth = (int) (currentDisplayMetrics.widthPixels);
-        CallbackBridge.physicalHeight = (int) (currentDisplayMetrics.heightPixels);
+        CallbackBridge.physicalWidth = currentDisplayMetrics.widthPixels;
+        CallbackBridge.physicalHeight = currentDisplayMetrics.heightPixels;
     }
 
     public static float dpToPx(float dp) {
@@ -398,16 +508,27 @@ public final class Tools {
         copyAssetFile(ctx, fileName, output, new File(fileName).getName(), overwrite);
     }
 
-    public static void copyAssetFile(Context ctx, String fileName, String output, String outputName, boolean overwrite) throws IOException
-    {
-        File file = new File(output);
-        if(!file.exists()) {
-            file.mkdirs();
+    public static void copyAssetFile(Context ctx, String fileName, String output, String outputName, boolean overwrite) throws IOException {
+        File parentFolder = new File(output);
+        if(!parentFolder.exists() && !parentFolder.mkdirs()) {
+            throw new IOException("Failed to create parent directory");
         }
-        File file2 = new File(output, outputName);
-        if(!file2.exists() || overwrite){
-            write(file2.getAbsolutePath(), loadFromAssetToByte(ctx, fileName));
+        File destinationFile = new File(output, outputName);
+        if(!destinationFile.exists() || overwrite){
+            try(InputStream inputStream = ctx.getAssets().open(fileName)) {
+                try (OutputStream outputStream = new FileOutputStream(destinationFile)){
+                    IOUtils.copy(inputStream, outputStream);
+                }
+            }
         }
+    }
+
+    public static String printToString(Throwable throwable) {
+        StringWriter stringWriter = new StringWriter();
+        PrintWriter printWriter = new PrintWriter(stringWriter);
+        throwable.printStackTrace(printWriter);
+        printWriter.close();
+        return stringWriter.toString();
     }
 
     public static void showError(Context ctx, Throwable e) {
@@ -415,52 +536,53 @@ public final class Tools {
     }
 
     public static void showError(final Context ctx, final Throwable e, final boolean exitIfOk) {
-        showError(ctx, R.string.global_error, e, exitIfOk, false);
+        showError(ctx, R.string.global_error, null ,e, exitIfOk, false);
+    }
+    public static void showError(final Context ctx, final int rolledMessage, final Throwable e) {
+        showError(ctx, R.string.global_error, ctx.getString(rolledMessage), e, false, false);
+    }
+    public static void showError(final Context ctx, final String rolledMessage, final Throwable e) {
+        showError(ctx, R.string.global_error, rolledMessage, e, false, false);
     }
 
     public static void showError(final Context ctx, final int titleId, final Throwable e, final boolean exitIfOk) {
-        showError(ctx, titleId, e, exitIfOk, false);
+        showError(ctx, titleId, null, e, exitIfOk, false);
     }
 
-    private static void showError(final Context ctx, final int titleId, final Throwable e, final boolean exitIfOk, final boolean showMore) {
+    private static void showError(final Context ctx, final int titleId, final String rolledMessage, final Throwable e, final boolean exitIfOk, final boolean showMore) {
         e.printStackTrace();
-        
-        Runnable runnable = new Runnable(){
 
-            @Override
-            public void run()
-            {
-                final String errMsg = showMore ? Log.getStackTraceString(e): e.getMessage();
-                AlertDialog.Builder builder = new AlertDialog.Builder((Context) ctx)
+        Runnable runnable = () -> {
+            final String errMsg = showMore ? printToString(e) : rolledMessage != null ? rolledMessage : e.getMessage();
+            AlertDialog.Builder builder = new AlertDialog.Builder(ctx)
                     .setTitle(titleId)
                     .setMessage(errMsg)
-                    .setPositiveButton(android.R.string.ok, (DialogInterface.OnClickListener) (p1, p2) -> {
+                    .setPositiveButton(android.R.string.ok, (p1, p2) -> {
                         if(exitIfOk) {
-                            if (ctx instanceof BaseMainActivity) {
-                                BaseMainActivity.fullyExit();
+                            if (ctx instanceof MainActivity) {
+                                MainActivity.fullyExit();
                             } else if (ctx instanceof Activity) {
                                 ((Activity) ctx).finish();
                             }
                         }
                     })
-                    .setNegativeButton(showMore ? R.string.error_show_less : R.string.error_show_more, (DialogInterface.OnClickListener) (p1, p2) -> showError(ctx, titleId, e, exitIfOk, !showMore))
-                    .setNeutralButton(android.R.string.copy, (DialogInterface.OnClickListener) (p1, p2) -> {
+                    .setNegativeButton(showMore ? R.string.error_show_less : R.string.error_show_more, (p1, p2) -> showError(ctx, titleId, rolledMessage, e, exitIfOk, !showMore))
+                    .setNeutralButton(android.R.string.copy, (p1, p2) -> {
                         ClipboardManager mgr = (ClipboardManager) ctx.getSystemService(Context.CLIPBOARD_SERVICE);
                         mgr.setPrimaryClip(ClipData.newPlainText("error", Log.getStackTraceString(e)));
                         if(exitIfOk) {
-                            if (ctx instanceof BaseMainActivity) {
-                                BaseMainActivity.fullyExit();
+                            if (ctx instanceof MainActivity) {
+                                MainActivity.fullyExit();
                             } else {
                                 ((Activity) ctx).finish();
                             }
                         }
                     })
                     .setCancelable(!exitIfOk);
-                try {
-                    builder.show();
-                } catch (Throwable th) {
-                    th.printStackTrace();
-                }
+            try {
+                builder.show();
+            } catch (Throwable th) {
+                th.printStackTrace();
             }
         };
 
@@ -471,38 +593,16 @@ public final class Tools {
         }
     }
 
-    public static void dialogOnUiThread(final Activity ctx, final CharSequence title, final CharSequence message) {
-        ctx.runOnUiThread(() -> new AlertDialog.Builder(ctx)
-            .setTitle(title)
-            .setMessage(message)
-            .setPositiveButton(android.R.string.ok, null)
-            .show());
+    public static void dialogOnUiThread(final Activity activity, final CharSequence title, final CharSequence message) {
+        activity.runOnUiThread(()->dialog(activity, title, message));
     }
 
-    public static void moveInside(String from, String to) {
-        File fromFile = new File(from);
-        for (File fromInside : fromFile.listFiles()) {
-            moveRecursive(fromInside.getAbsolutePath(), to);
-        }
-        fromFile.delete();
-    }
-
-    public static void moveRecursive(String from, String to) {
-        moveRecursive(new File(from), new File(to));
-    }
-
-    public static void moveRecursive(File from, File to) {
-        File toFrom = new File(to, from.getName());
-        try {
-            if (from.isDirectory()) {
-                for (File child : from.listFiles()) {
-                    moveRecursive(child, toFrom);
-                }
-            }
-        } finally {
-            from.getParentFile().mkdirs();
-            from.renameTo(toFrom);
-        }
+    public static void dialog(final Context context, final CharSequence title, final CharSequence message) {
+        new AlertDialog.Builder(context)
+                .setTitle(title)
+                .setMessage(message)
+                .setPositiveButton(android.R.string.ok, null)
+                .show();
     }
 
     public static void openURL(Activity act, String url) {
@@ -510,48 +610,50 @@ public final class Tools {
         act.startActivity(browserIntent);
     }
 
+    private static boolean checkRules(JMinecraftVersionList.Arguments.ArgValue.ArgRules[] rules) {
+        if(rules == null) return true; // always allow
+        for (JMinecraftVersionList.Arguments.ArgValue.ArgRules rule : rules) {
+            if (rule.action.equals("allow") && rule.os != null && rule.os.name.equals("osx")) {
+                return false; //disallow
+            }
+        }
+        return true; // allow if none match
+    }
     public static String[] generateLibClasspath(JMinecraftVersionList.Version info) {
-        List<String> libDir = new ArrayList<String>();
-
+        List<String> libDir = new ArrayList<>();
         for (DependentLibrary libItem: info.libraries) {
-            String[] libInfos = libItem.name.split(":");
-            libDir.add(Tools.DIR_HOME_LIBRARY + "/" + Tools.artifactToPath(libInfos[0], libInfos[1], libInfos[2]));
+            if(!checkRules(libItem.rules)) continue;
+            libDir.add(Tools.DIR_HOME_LIBRARY + "/" + artifactToPath(libItem));
         }
         return libDir.toArray(new String[0]);
     }
 
-    public static JMinecraftVersionList.Version getVersionInfo(BaseLauncherActivity bla, String versionName) {
+    public static JMinecraftVersionList.Version getVersionInfo(String versionName) {
+        return getVersionInfo(versionName, false);
+    }
+
+    @SuppressWarnings({"unchecked", "rawtypes"})
+    public static JMinecraftVersionList.Version getVersionInfo(String versionName, boolean skipInheriting) {
         try {
             JMinecraftVersionList.Version customVer = Tools.GLOBAL_GSON.fromJson(read(DIR_HOME_VERSION + "/" + versionName + "/" + versionName + ".json"), JMinecraftVersionList.Version.class);
-            for (DependentLibrary lib : customVer.libraries) {
-                if (lib.name.startsWith(LIBNAME_OPTIFINE)) {
-                    customVer.optifineLib = lib;
-                }
-            }
-            if (customVer.inheritsFrom == null || customVer.inheritsFrom.equals(customVer.id)) {
+            if (skipInheriting || customVer.inheritsFrom == null || customVer.inheritsFrom.equals(customVer.id)) {
                 return customVer;
             } else {
-                JMinecraftVersionList.Version inheritsVer = null;
-                if(bla != null) if (bla.mVersionList != null) {
-                    for (JMinecraftVersionList.Version valueVer : bla.mVersionList.versions) {
-                        if (valueVer.id.equals(customVer.inheritsFrom) && (!new File(DIR_HOME_VERSION + "/" + customVer.inheritsFrom + "/" + customVer.inheritsFrom + ".json").exists()) && (valueVer.url != null)) {
-                            Tools.downloadFile(valueVer.url,DIR_HOME_VERSION + "/" + customVer.inheritsFrom + "/" + customVer.inheritsFrom + ".json");
-                        }
-                    }
-                }//If it won't download, just search for it
-                   try{
-                      inheritsVer = Tools.GLOBAL_GSON.fromJson(read(DIR_HOME_VERSION + "/" + customVer.inheritsFrom + "/" + customVer.inheritsFrom + ".json"), JMinecraftVersionList.Version.class);
-                   }catch(IOException e) {
-                       throw new RuntimeException("Can't find the source version for "+ versionName +" (req version="+customVer.inheritsFrom+")");
-                   }
-                inheritsVer.inheritsFrom = inheritsVer.id;
+                JMinecraftVersionList.Version inheritsVer;
+                //If it won't download, just search for it
+                try{
+                    inheritsVer = Tools.GLOBAL_GSON.fromJson(read(DIR_HOME_VERSION + "/" + customVer.inheritsFrom + "/" + customVer.inheritsFrom + ".json"), JMinecraftVersionList.Version.class);
+                }catch(IOException e) {
+                    throw new RuntimeException("Can't find the source version for "+ versionName +" (req version="+customVer.inheritsFrom+")");
+                }
+                //inheritsVer.inheritsFrom = inheritsVer.id;
                 insertSafety(inheritsVer, customVer,
-                             "assetIndex", "assets", "id",
-                             "mainClass", "minecraftArguments",
-                             "optifineLib", "releaseTime", "time", "type"
-                             );
+                        "assetIndex", "assets", "id",
+                        "mainClass", "minecraftArguments",
+                        "releaseTime", "time", "type"
+                );
 
-                List<DependentLibrary> libList = new ArrayList<DependentLibrary>(Arrays.asList(inheritsVer.libraries));
+                List<DependentLibrary> libList = new ArrayList<>(Arrays.asList(inheritsVer.libraries));
                 try {
                     loop_1:
                     for (DependentLibrary lib : customVer.libraries) {
@@ -559,17 +661,17 @@ public final class Tools {
                         for (int i = 0; i < libList.size(); i++) {
                             DependentLibrary libAdded = libList.get(i);
                             String libAddedName = libAdded.name.substring(0, libAdded.name.lastIndexOf(":"));
-                            
+
                             if (libAddedName.equals(libName)) {
-                                Log.d(APP_NAME, "Library " + libName + ": Replaced version " + 
-                                    libName.substring(libName.lastIndexOf(":") + 1) + " with " +
-                                    libAddedName.substring(libAddedName.lastIndexOf(":") + 1));
+                                Log.d(APP_NAME, "Library " + libName + ": Replaced version " +
+                                        libName.substring(libName.lastIndexOf(":") + 1) + " with " +
+                                        libAddedName.substring(libAddedName.lastIndexOf(":") + 1));
                                 libList.set(i, lib);
                                 continue loop_1;
                             }
                         }
 
-                        libList.add(lib);
+                        libList.add(0, lib);
                     }
                 } finally {
                     inheritsVer.libraries = libList.toArray(new DependentLibrary[0]);
@@ -577,16 +679,15 @@ public final class Tools {
 
                 // Inheriting Minecraft 1.13+ with append custom args
                 if (inheritsVer.arguments != null && customVer.arguments != null) {
-                    List totalArgList = new ArrayList();
-                    totalArgList.addAll(Arrays.asList(inheritsVer.arguments.game));
-                    
+                    List totalArgList = new ArrayList(Arrays.asList(inheritsVer.arguments.game));
+
                     int nskip = 0;
                     for (int i = 0; i < customVer.arguments.game.length; i++) {
                         if (nskip > 0) {
                             nskip--;
                             continue;
                         }
-                        
+
                         Object perCustomArg = customVer.arguments.game[i];
                         if (perCustomArg instanceof String) {
                             String perCustomArgStr = (String) perCustomArg;
@@ -634,123 +735,44 @@ public final class Tools {
             }
         }
     }
-    
-    public static String convertStream(InputStream inputStream) throws IOException {
-        return convertStream(inputStream, Charset.forName("UTF-8"));
-    }
-    
-    public static String convertStream(InputStream inputStream, Charset charset) throws IOException {
-        String out = "";
-        int len;
-        byte[] buf = new byte[512];
-        while((len = inputStream.read(buf))!=-1) {
-            out += new String(buf,0,len,charset);
-        }
-        return out;
-    }
-
-    public static File lastFileModified(String dir) {
-        File fl = new File(dir);
-
-        File[] files = fl.listFiles(new FileFilter() {          
-                public boolean accept(File file) {
-                    return file.isFile();
-                }
-            });
-
-        long lastMod = Long.MIN_VALUE;
-        File choice = null;
-        for (File file : files) {
-            if (file.lastModified() > lastMod) {
-                choice = file;
-                lastMod = file.lastModified();
-            }
-        }
-
-        return choice;
-    }
-
 
     public static String read(InputStream is) throws IOException {
-        String out = "";
-        int len;
-        byte[] buf = new byte[512];
-        while((len = is.read(buf))!=-1) {
-            out += new String(buf,0,len);
-        }
-        return out;
+        String readResult = IOUtils.toString(is, StandardCharsets.UTF_8);
+        is.close();
+        return readResult;
     }
 
     public static String read(String path) throws IOException {
         return read(new FileInputStream(path));
     }
 
-    public static void write(String path, byte[] content) throws IOException
-    {
-        File outPath = new File(path);
-        outPath.getParentFile().mkdirs();
-        outPath.createNewFile();
-
-        BufferedOutputStream fos = new BufferedOutputStream(new FileOutputStream(path));
-        fos.write(content, 0, content.length);
-        fos.close();
-    }
-
     public static void write(String path, String content) throws IOException {
-        write(path, content.getBytes());
-    }
-
-    public static byte[] loadFromAssetToByte(Context ctx, String inFile) {
-        byte[] buffer = null;
-
-        try {
-            InputStream stream = ctx.getAssets().open(inFile);
-
-            int size = stream.available();
-            buffer = new byte[size];
-            stream.read(buffer);
-            stream.close();
-        } catch (IOException e) {
-            // Handle exceptions here
-            e.printStackTrace();
+        File file = new File(path);
+        File parent = file.getParentFile();
+        if(parent != null && !parent.exists()) {
+            if(!parent.mkdirs()) throw new IOException("Failed to create parent directory");
         }
-        return buffer;
+        try(FileOutputStream outStream = new FileOutputStream(file)) {
+            IOUtils.write(content, outStream);
+        }
     }
 
     public static void downloadFile(String urlInput, String nameOutput) throws IOException {
         File file = new File(nameOutput);
         DownloadUtils.downloadFile(urlInput, file);
     }
-    public abstract static class DownloaderFeedback {
-        public abstract void updateProgress(int curr, int max);
+    public interface DownloaderFeedback {
+        void updateProgress(int curr, int max);
     }
-    public static void downloadFileMonitored(String urlInput,String nameOutput, DownloaderFeedback monitor) throws IOException {
-        File nameOutputFile = new File(nameOutput);
-        if (!nameOutputFile.exists()) {
-            nameOutputFile.getParentFile().mkdirs();
-        }
-        HttpURLConnection conn = (HttpURLConnection) new URL(urlInput).openConnection();
-        InputStream readStr = conn.getInputStream();
-        FileOutputStream fos = new FileOutputStream(nameOutputFile);
-        int cur = 0;
-        int oval = 0;
-        int len = conn.getContentLength();
-        byte[] buf = new byte[65535];
-        while ((cur = readStr.read(buf)) != -1) {
-            oval += cur;
-            fos.write(buf, 0, cur);
-            monitor.updateProgress(oval, len);
-        }
-        fos.close();
-        conn.disconnect();
-    }
+
+
     public static boolean compareSHA1(File f, String sourceSHA) {
         try {
             String sha1_dst;
             try (InputStream is = new FileInputStream(f)) {
-                 sha1_dst = new String(Hex.encodeHex(org.apache.commons.codec.digest.DigestUtils.sha1(is)));
+                sha1_dst = new String(Hex.encodeHex(org.apache.commons.codec.digest.DigestUtils.sha1(is)));
             }
-            if(sha1_dst != null && sourceSHA != null) {
+            if(sourceSHA != null) {
                 return sha1_dst.equalsIgnoreCase(sourceSHA);
             } else{
                 return true; // fake match
@@ -758,75 +780,6 @@ public final class Tools {
         }catch (IOException e) {
             Log.i("SHA1","Fake-matching a hash due to a read error",e);
             return true;
-        }
-    }
-    public static class ZipTool
-    {
-        private ZipTool(){}
-        public static void zip(List<File> files, File zipFile) throws IOException {
-            final int BUFFER_SIZE = 2048;
-
-            BufferedInputStream origin = null;
-            ZipOutputStream out = new ZipOutputStream(new BufferedOutputStream(new FileOutputStream(zipFile)));
-
-            try {
-                byte data[] = new byte[BUFFER_SIZE];
-
-                for (File file : files) {
-                    FileInputStream fileInputStream = new FileInputStream( file );
-
-                    origin = new BufferedInputStream(fileInputStream, BUFFER_SIZE);
-
-                    try {
-                        ZipEntry entry = new ZipEntry(file.getName());
-
-                        out.putNextEntry(entry);
-
-                        int count;
-                        while ((count = origin.read(data, 0, BUFFER_SIZE)) != -1) {
-                            out.write(data, 0, count);
-                        }
-                    }
-                    finally {
-                        origin.close();
-                    }
-                }
-            } finally {
-                out.close();
-            }
-        }
-        public static void unzip(File zipFile, File targetDirectory) throws IOException {
-            final int BUFFER_SIZE = 1024;
-            ZipInputStream zis = new ZipInputStream(
-                new BufferedInputStream(new FileInputStream(zipFile)));
-            try {
-                ZipEntry ze;
-                int count;
-                byte[] buffer = new byte[BUFFER_SIZE];
-                while ((ze = zis.getNextEntry()) != null) {
-                    File file = new File(targetDirectory, ze.getName());
-                    File dir = ze.isDirectory() ? file : file.getParentFile();
-                    if (!dir.isDirectory() && !dir.mkdirs())
-                        throw new FileNotFoundException("Failed to ensure directory: " +
-                                                        dir.getAbsolutePath());
-                    if (ze.isDirectory())
-                        continue;
-                    FileOutputStream fout = new FileOutputStream(file);
-                    try {
-                        while ((count = zis.read(buffer)) != -1)
-                            fout.write(buffer, 0, count);
-                    } finally {
-                        fout.close();
-                    }
-                    /* if time should be restored as well
-                     long time = ze.getTime();
-                     if (time > 0)
-                     file.setLastModified(time);
-                     */
-                }
-            } finally {
-                zis.close();
-            }
         }
     }
 
@@ -860,5 +813,185 @@ public final class Tools {
         displaySideRes *= scaling;
         if(displaySideRes % 2 != 0) displaySideRes ++;
         return displaySideRes;
+    }
+
+    public static String getFileName(Context ctx, Uri uri) {
+        Cursor c = ctx.getContentResolver().query(uri, null, null, null, null);
+        if(c == null) return uri.getLastPathSegment(); // idk myself but it happens on asus file manager
+        c.moveToFirst();
+        int columnIndex = c.getColumnIndex(OpenableColumns.DISPLAY_NAME);
+        if(columnIndex == -1) return uri.getLastPathSegment();
+        String fileName = c.getString(columnIndex);
+        c.close();
+        return fileName;
+    }
+
+    /** Swap the main fragment with another */
+    public static void swapFragment(FragmentActivity fragmentActivity , Class<? extends Fragment> fragmentClass,
+                                    @Nullable String fragmentTag, boolean addCurrentToBackstack, @Nullable Bundle bundle) {
+        // When people tab out, it might happen
+        //TODO handle custom animations
+        FragmentTransaction transaction = fragmentActivity.getSupportFragmentManager().beginTransaction()
+                .setReorderingAllowed(true)
+                .replace(R.id.container_fragment, fragmentClass, bundle, fragmentTag);
+        if(addCurrentToBackstack) transaction.addToBackStack(null);
+
+        transaction.commit();
+    }
+
+    /** Remove the current fragment */
+    public static void removeCurrentFragment(FragmentActivity fragmentActivity){
+        fragmentActivity.getSupportFragmentManager().popBackStackImmediate();
+    }
+
+    public static void installMod(Activity activity, boolean customJavaArgs) {
+        if (MultiRTUtils.getExactJreName(8) == null) {
+            Toast.makeText(activity, R.string.multirt_nojava8rt, Toast.LENGTH_LONG).show();
+            return;
+        }
+
+        if(!customJavaArgs){ // Launch the intent to get the jar file
+            Intent intent = new Intent(Intent.ACTION_OPEN_DOCUMENT);
+            intent.addCategory(Intent.CATEGORY_OPENABLE);
+            String mimeType = MimeTypeMap.getSingleton().getMimeTypeFromExtension("jar");
+            if(mimeType == null) mimeType = "*/*";
+            intent.setType(mimeType);
+            activity.startActivityForResult(intent, RUN_MOD_INSTALLER);
+            return;
+        }
+
+        // install mods with custom arguments
+        final EditText editText = new EditText(activity);
+        editText.setSingleLine();
+        editText.setHint("-jar/-cp /path/to/file.jar ...");
+
+        AlertDialog.Builder builder = new AlertDialog.Builder(activity)
+                .setTitle(R.string.alerttitle_installmod)
+                .setNegativeButton(android.R.string.cancel, null)
+                .setView(editText)
+                .setPositiveButton(android.R.string.ok, (di, i) -> {
+                    Intent intent = new Intent(activity, JavaGUILauncherActivity.class);
+                    intent.putExtra("skipDetectMod", true);
+                    intent.putExtra("javaArgs", editText.getText().toString());
+                    activity.startActivity(intent);
+                });
+        builder.show();
+    }
+
+    /** Display and return a progress dialog, instructing to wait */
+    private static ProgressDialog getWaitingDialog(Context ctx){
+        final ProgressDialog barrier = new ProgressDialog(ctx);
+        barrier.setMessage(ctx.getString(R.string.global_waiting));
+        barrier.setProgressStyle(ProgressDialog.STYLE_SPINNER);
+        barrier.setCancelable(false);
+        barrier.show();
+
+        return barrier;
+    }
+
+    /** Copy the mod file, and launch the mod installer activity */
+    public static void launchModInstaller(Activity activity, @NonNull Intent data){
+        final ProgressDialog alertDialog = getWaitingDialog(activity);
+
+        final Uri uri = data.getData();
+        alertDialog.setMessage(activity.getString(R.string.multirt_progress_caching));
+        sExecutorService.execute(() -> {
+            try {
+                final String name = getFileName(activity, uri);
+                final File modInstallerFile = new File(Tools.DIR_CACHE, name);
+                FileOutputStream fos = new FileOutputStream(modInstallerFile);
+                InputStream input = activity.getContentResolver().openInputStream(uri);
+                IOUtils.copy(input, fos);
+                input.close();
+                fos.close();
+                activity.runOnUiThread(() -> {
+                    alertDialog.dismiss();
+                    Intent intent = new Intent(activity, JavaGUILauncherActivity.class);
+                    intent.putExtra("modFile", modInstallerFile);
+                    activity.startActivity(intent);
+                });
+            }catch(IOException e) {
+                Tools.showError(activity, e);
+            }
+        });
+    }
+
+
+    public static void installRuntimeFromUri(Activity activity, Uri uri){
+        sExecutorService.execute(() -> {
+            try {
+                String name = getFileName(activity, uri);
+                MultiRTUtils.installRuntimeNamed(
+                        NATIVE_LIB_DIR,
+                        activity.getContentResolver().openInputStream(uri),
+                        name);
+
+                MultiRTUtils.postPrepare(name);
+            } catch (IOException e) {
+                Tools.showError(activity, e);
+            }
+        });
+    }
+
+    public static String extractUntilCharacter(String input, String whatFor, char terminator) {
+        int whatForStart = input.indexOf(whatFor);
+        if(whatForStart == -1) return null;
+        whatForStart += whatFor.length();
+        int terminatorIndex = input.indexOf(terminator, whatForStart);
+        if(terminatorIndex == -1) return null;
+        return input.substring(whatForStart, terminatorIndex);
+    }
+
+    public static boolean isValidString(String string) {
+        return string != null && !string.isEmpty();
+    }
+
+    public static String getRuntimeName(String prefixedName) {
+        if(prefixedName == null) return prefixedName;
+        if(!prefixedName.startsWith(Tools.LAUNCHERPROFILES_RTPREFIX)) return null;
+        return prefixedName.substring(Tools.LAUNCHERPROFILES_RTPREFIX.length());
+    }
+
+    public static String getSelectedRuntime(MinecraftProfile minecraftProfile) {
+        String runtime = LauncherPreferences.PREF_DEFAULT_RUNTIME;
+        String profileRuntime = getRuntimeName(minecraftProfile.javaDir);
+        if(profileRuntime != null) {
+            if(MultiRTUtils.forceReread(profileRuntime).versionString != null) {
+                runtime = profileRuntime;
+            }
+        }
+        return runtime;
+    }
+
+    public static void runOnUiThread(Runnable runnable) {
+        MAIN_HANDLER.post(runnable);
+    }
+
+    public static @NonNull String pickRuntime(MinecraftProfile minecraftProfile, int targetJavaVersion) {
+        String runtime = getSelectedRuntime(minecraftProfile);
+        String profileRuntime = getRuntimeName(minecraftProfile.javaDir);
+        Runtime pickedRuntime = MultiRTUtils.read(runtime);
+        if(runtime == null || pickedRuntime.javaVersion == 0 || pickedRuntime.javaVersion < targetJavaVersion) {
+            String preferredRuntime = MultiRTUtils.getNearestJreName(targetJavaVersion);
+            if(preferredRuntime == null) throw new RuntimeException("Failed to autopick runtime!");
+            if(profileRuntime != null) minecraftProfile.javaDir = Tools.LAUNCHERPROFILES_RTPREFIX+preferredRuntime;
+            runtime = preferredRuntime;
+        }
+        return runtime;
+    }
+
+    /** Triggers the share intent chooser, with the latestlog file attached to it */
+    public static void shareLog(Context context){
+        Uri contentUri = DocumentsContract.buildDocumentUri(context.getString(R.string.storageProviderAuthorities), Tools.DIR_GAME_HOME + "/latestlog.txt");
+
+        Intent shareIntent = new Intent();
+        shareIntent.setAction(Intent.ACTION_SEND);
+        shareIntent.putExtra(Intent.EXTRA_STREAM, contentUri);
+        shareIntent.addFlags(Intent.FLAG_GRANT_READ_URI_PERMISSION);
+        shareIntent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+        shareIntent.setType("text/plain");
+
+        Intent sendIntent = Intent.createChooser(shareIntent, "latestlog.txt");
+        context.startActivity(sendIntent);
     }
 }
